--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "radbbit",
+  "name": "fiamma",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "lodash": "^4.17.2",
-    "request": "^2.75.0"
+    "mysql": "^2.12.0",
+    "request": "^2.75.0",
+    "sequelize": "~3.17.0"
   },
   "devDependencies": {},
   "scripts": {
